fix footer links gap

--- a/styles.css
+++ b/styles.css
@@ -441,7 +441,7 @@ body {
 }
 .footer__links {
   display: flex;
-  row-gap: 10rem;
+  gap: 14rem;
   justify-content: center;
   color: #676767;
   font-family: Poppins;
